--- a/src/pretix/presale/templates/pretixpresale/event/voucher.html
+++ b/src/pretix/presale/templates/pretixpresale/event/voucher.html
@@ -45,12 +45,14 @@
                                                         alt="{{ item.name }}"/>
                                             </a>
                                         {% endif %}
-                                        <strong>{{ item.name }}</strong>
-                                        {% if item.description %}
-                                            <div class="product-description">
-                                                {{ item.description|localize|rich_text }}
-                                            </div>
-                                        {% endif %}
+                                        <div class="product-description {% if item.picture %}with-picture{% endif %}">
+                                            <strong>{{ item.name }}</strong>
+                                            {% if item.description %}
+                                                <div class="product-description">
+                                                    {{ item.description|localize|rich_text }}
+                                                </div>
+                                            {% endif %}
+                                        </div>
                                     </div>
                                     <div class="col-md-2 col-xs-6 price">
                                         {% if item.min_price != item.max_price or item.free_price %}
@@ -135,12 +137,14 @@
                                                     alt="{{ item.name }}"/>
                                         </a>
                                     {% endif %}
-                                    <strong>{{ item.name }}</strong>
-                                    {% if item.description %}
-                                        <div class="product-description">
-                                            {{ item.description|localize|rich_text }}
-                                        </div>
-                                    {% endif %}
+                                    <div class="product-description {% if item.picture %}with-picture{% endif %}">
+                                        <strong>{{ item.name }}</strong>
+                                        {% if item.description %}
+                                            <div class="product-description">
+                                                {{ item.description|localize|rich_text }}
+                                            </div>
+                                        {% endif %}
+                                    </div>
                                 </div>
                                 <div class="col-md-2 col-xs-6 price">
                                     {% if item.free_price %}
