--- a/src/pretix/static/pretixpresale/scss/_event.scss
+++ b/src/pretix/static/pretixpresale/scss/_event.scss
@@ -30,6 +30,10 @@
         display: block;
     }
 
+    .product-description.with-picture {
+        margin-left: 70px;
+    }
+
     .productpicture {
         float: left;
         margin-right: 10px;
