Display free tickets as "FREE" instead of "0.00"

--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -249,7 +249,7 @@
                                     {% endif %}
                                 {% else %}
                                     <strong>{{ event.currency }} {{ line.price|floatformat:2 }}</strong>
-                                    {% if line.tax_rate %}
+                                    {% if line.tax_rate and line.price %}
                                         <br />
                                         <small>
                                             {% blocktrans trimmed with rate=line.tax_rate taxname=line.tax_rule.name|default:s_taxes %}
@@ -293,7 +293,7 @@
                             <div class="clearfix"></div>
                         </div>
                     {% endif %}
-                    {% if event.settings.display_net_prices %}
+                    {% if event.settings.display_net_prices and items.net_total %}
                         <div class="row-fluid product-row total">
                             <div class="col-md-4 col-xs-6">
                                 <strong>{% trans "Net total" %}</strong>
