Fix #156 -- Plug-in settings navigation hook

--- a/src/pretix/control/templates/pretixcontrol/event/base.html
+++ b/src/pretix/control/templates/pretixcontrol/event/base.html
@@ -14,7 +14,7 @@
     {% if 'can_change_event_settings' in request.eventpermset %}
         <li>
             <a href="{% url 'control:event.settings' organizer=request.event.organizer.slug event=request.event.slug %}"
-                    {% if "event.settings" == url_name or "event.settings." in url_name %}class="active"{% endif %}>
+                    {% if is_event_settings or "event.settings" == url_name or "event.settings." in url_name %}class="active"{% endif %}>
                 <i class="fa fa-wrench fa-fw"></i>
                 {% trans "Settings" %}
             </a>
