Make PDF download more prominent

--- a/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
@@ -60,7 +60,8 @@
                 {% if not line.addon_to or event.settings.ticket_download_addons %}
                     {% for b in download_buttons %}
                         <a href="{% eventurl event "presale:event.order.download" secret=order.secret order=order.code output=b.identifier position=line.id %}"
-                                class="btn btn-default btn-sm" data-asyncdownload>
+                                class="btn btn-default btn-sm {% if b.identifier == "pdf" %}btn-primary{% endif %}"
+                                data-asyncdownload>
                             <span class="fa fa-download"></span> {{ b.text }}
                         </a>
                     {% endfor %}
@@ -146,7 +147,8 @@
                 {% if not line.addon_to or event.settings.ticket_download_addons %}
                     {% for b in download_buttons %}
                         <a href="{% eventurl event "presale:event.order.download" secret=order.secret order=order.code output=b.identifier position=line.id %}"
-                           class="btn btn-default btn-sm" data-asyncdownload>
+                           class="btn btn-default btn-sm {% if b.identifier == "pdf" %}btn-primary{% endif %}"
+                                data-asyncdownload>
                             <span class="fa fa-download"></span> {{ b.text }}
                         </a>
                     {% endfor %}
