--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -45,6 +45,7 @@
             {% bootstrap_field sform.show_times layout="horizontal" %}
             {% bootstrap_field sform.contact_mail layout="horizontal" %}
             {% bootstrap_field sform.imprint_url layout="horizontal" %}
+            {% bootstrap_field sform.confirm_text layout="horizontal" %}
             {% bootstrap_field sform.show_quota_left layout="horizontal" %}
             {% bootstrap_field sform.display_net_prices layout="horizontal" %}
         </fieldset>
