Allow clicking on typeahead results

--- a/src/pretix/static/pretixcontrol/scss/_dashboard.scss
+++ b/src/pretix/static/pretixcontrol/scss/_dashboard.scss
@@ -161,6 +161,9 @@
   .event-dropdown .event-name-full, .mobile-event-dropdown .event-name-full {
     white-space: normal;
   }
+  a {
+    cursor: pointer;
+  }
 }
 
 @media (max-width: $screen-sm-max) {
